Added Logout function Added tests

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,4 +15,8 @@
         <a href="/profile/edit">Edit profile</a>
     </p>
 
+    <p>
+        <a href="/logout"> Logout</a>
+    </p>
+
 {% endblock content %}
